fixed modal on tablet

--- a/css/main.css
+++ b/css/main.css
@@ -679,13 +679,13 @@ img {
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 768px) {
   .backdrop.is-hidden .modal {
     transform: translate(-50%, -50%) scale(0);
   }
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 768px) {
   .modal {
     position: absolute;
     top: 50%;
