--- a/sass/layout/_modal-window.scss
+++ b/sass/layout/_modal-window.scss
@@ -39,11 +39,11 @@
    .backdrop.is-hidden & {
       transform: scale(0);
       transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
-      @media screen and (min-width: 1200px) {
+      @media screen and (min-width: 768px) {
          transform: translate(-50%, -50%) scale(0);
       }
    }
-   @media screen and (min-width: 1200px) {
+   @media screen and (min-width: 768px) {
       position: absolute;
       top: 50%;
       left: 50%;
